# touchbar-mbp2019

./: CMakeLists.txt  main.c
include/: g_graphics.h  gui_gui.h  manager.h
src/: g_graphics.c  manager.c
